@@ -1,3 +1,11 @@
+2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* include/linux/spinlock.h (DEFINE_SPINLOCK): Added.
+	* include/linux/slab.h (vfree): Added vmalloc and vfree which map
+	to malloc and free.
+	* include/linux/rwsem.h: New file. eCos does not have read/write
+	semaphores so these are mapped to normal semaphores.
+	
 2004-08-12  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* include/linux/spinlock.h: Add CYG_UNUSED_PARAM() calls to avoid
